--- a/DeepWoodsMod/i18n/ru.json
+++ b/DeepWoodsMod/i18n/ru.json
@@ -7,5 +7,5 @@
   "healing-fountain.drink-message": "Вы чувствуете себя отдохнувшим, полным энергии и каким-то образом везучим.",
   "woods-obelisk.description": "Телепортирует Вас прямо в глубины леса.",
   "woods-obelisk.name": "Лесной обелиск",
-  "woods-obelisk.wizard-mail": "Я почувствовал Ваше присутствие в глубинах леса.^В этой земле и корнях деревьев обитает сильная и старая магия.^Это сложно, но с правильными ингредиентами я должен суметь отследить обелиск, использующий эту магию, чтобы дать Вам пробраться в лес глубже.^Приходите в мою башню, когда будете готовы.^   -М. Расмодиус, Волшебник"
+  "woods-obelisk.wizard-mail": "Я почувствовал Ваше присутствие в глубинах леса.^В земле и корнях деревьев обитает сильная и старая магия.^Это сложно, но с правильными ингредиентами я должен суметь отследить обелиск, использующий эту магию, чтобы дать Вам пробраться в лес глубже.^Приходите в мою башню, когда будете готовы.^   -М. Расмодиус, Волшебник"
 }
