--- a/DeepWoodsMod/i18n/Credits.txt
+++ b/DeepWoodsMod/i18n/Credits.txt
@@ -1,5 +1,6 @@
 Translations:
 
+de.json by Deflaktor (https://github.com/Deflaktor)
 es.json by skullSG (https://forums.nexusmods.com/index.php?showuser=55091432)
 fr.json by AresRyu (https://forums.nexusmods.com/index.php?/user/31452340-aresryu/)
 ko.json by S2SKY (https://github.com/S2SKY)
