--- a/DeepWoodsMod/i18n/fr.json
+++ b/DeepWoodsMod/i18n/fr.json
@@ -1,10 +1,10 @@
-﻿{
-  "easter-egg.hatched-message": "A new... wait a minute, a rabbit hatched?!",
-  "easter-egg.name": "Easter Egg",
-  "excalibur.description": "Il se sent plein d'espoir pour la manier.",
-  "excalibur.name": "Master Sword",
-  "lost-message": "Uh-oh, il semble que vous vous êtes perdu dans les bois",
-  "woods-obelisk.description": "Woods Obelisk Description",
-  "woods-obelisk.name": "Woods Obelisk",
+{
+  "easter-egg.hatched-message": "Un nouveau... attends une seconde, un lapin a éclot ?!",
+  "easter-egg.name": "Oeuf de Pâques",
+  "excalibur.description": "La tenir en main te remplit d'espoir.",
+  "excalibur.name": "Epée de Légende",
+  "lost-message": "Uh-oh, il semble que tu te sois perdu dans les bois",
+  "woods-obelisk.description": "Te téléportes dans les Bois Profonds",
+  "woods-obelisk.name": "Obélisque des bois",
   "woods-obelisk.wizard-mail": "Je pouvais sentir votre présence dans les profondeurs de la forêt. Il y a une forte et vielle magie enfouie dans les racines et la terre de ces arbres. C'est difficile, mais avec les bons ingrédients, je devrais pouvoir manifeste un obélisque qui utilise cette magie pour te permettre d’avoir un accès beaucoup plus profond dans la forêt. ^ Viens dans ma tour quand tu seras prêt. ^ -M. Rasmodius, le Magicien"
 }
