Spanish translation for 3.0.0 by Papaya2

--- a/src/licenses/i18n.md
+++ b/src/licenses/i18n.md
@@ -1,7 +1,7 @@
 # DeepWoods i18n/Translations Credits
 
  - [de.json](../i18n/de.json) by [Deflaktor](https://github.com/Deflaktor)
- - [es.json](../i18n/es.json) by [skullSG](https://forums.nexusmods.com/index.php?showuser=55091432)
+ - [es.json](../i18n/es.json) by [skullSG](https://forums.nexusmods.com/index.php?showuser=55091432) and [Papaya2](https://www.nexusmods.com/users/76307643)
  - [fr.json](../i18n/fr.json) by [AresRyu](https://forums.nexusmods.com/index.php?/user/31452340-aresryu/)
  - [hu.json](../i18n/hu.json) by [martin66789](https://www.nexusmods.com/users/27323031)
  - [it.json](../i18n/it.json) by [Giasko](https://github.com/Giasko0)
