--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,59 +1,44 @@
 {
-  "easter-egg.hatched-message": "Un nouveau... attends une seconde, un lapin a éclot ?!",
+  "easter-egg.hatched-message": "Un nouveau... Attends une seconde, un lapin a éclot ?!",
   "easter-egg.name": "Oeuf de Pâques",
   "excalibur.description": "La tenir en main te remplit d'espoir.",
   "excalibur.name": "Epée de Légende",
-  "excalibur.nope-message": "Ca ne bouge pas.",
+  "excalibur.nope-message": "Ça ne bouge pas.",
+  "lost-message": "Uh-oh, il semble que tu te sois perdu dans les bois...",
   "healing-fountain.drink-message": "Vous vous sentez rafraîchi, plein d'énergie et, d'une manière ou d'une autre, chanceux.",
-  "lost-message": "Uh-oh, il semble que tu te sois perdu dans les bois",
-  "woods-obelisk.description": "Te téléportes dans les Bois Profonds",
-  "woods-obelisk.name": "Obélisque des bois",
-  "woods-obelisk.wizard-mail": "Je pouvais sentir votre présence dans les profondeurs de la forêt. Il y a une forte et vielle magie enfouie dans les racines et la terre de ces arbres. C'est difficile, mais avec les bons ingrédients, je devrais pouvoir manifeste un obélisque qui utilise cette magie pour te permettre d’avoir un accès beaucoup plus profond dans la forêt. ^ Viens dans ma tour quand tu seras prêt. ^ -M. Rasmodius, le Magicien",
+  "woods-obelisk.description": "Te téléportes dans les Bois Profonds.",
+  "woods-obelisk.name": "Obélisque des Bois Profonds",
+  "woods-obelisk.wizard-mail": "Je pouvais sentir votre présence dans les profondeurs de la forêt.^ Il y a une forte et vielle magie enfouie dans les racines et la terre de ces arbres.^ C'est difficile, mais avec les bons ingrédients, je devrais pouvoir faire apparaître un obélisque qui utilise cette magie pour te permettre d’avoir un accès beaucoup plus profond dans la forêt. ^ Viens dans ma tour quand tu seras prêt. ^ - Rasmodius, le Sorcier",
 
-  "messagebox.ok": "Ok",
+  "messagebox.close": "Fermer",
 
-  "maxhouse.puzzle.nope": "Vous entendez un click mais rien ne se passe...",
+  "maxhouse.puzzle.nope": "Vous entendez un clic mais rien ne se passe...",
 
   "maxhouse.stuff.question": "Beaucoup, beaucoup de choses.",
-  "maxhouse.stuff.answer.search": "Cherchez parmi les équipements",
-  "maxhouse.stuff.answer.nevermind": "laisse tomber",
+  "maxhouse.stuff.answer.search": "Chercher parmi les équipements",
+  "maxhouse.stuff.answer.nevermind": "Laisser tomber",
   "maxhouse.stuff.nothing": "Vous n'avez rien trouvé d'utile dans l'immédiat. Peut-être une autre fois...",
-
-  "maxhouse.books.question": "Un assortiment de livres.",
-  "maxhouse.books.answer.read": "lisez un livre",
-  "maxhouse.books.answer.nevermind": "laisse tomber",
-  "maxhouse.books.interesting": "C'était une lecture interessante!",
 
   "maxhouse.shop.empty": "La boutique est actuellement en rupture de stock. Revenez plus tard.",
   "maxhouse.quests.empty": "Actuellement, aucune tâche ou quête n'est ouverte. Revenez plus tard.",
 
-  "sign.text.welcome": "Vous entrez dans les Bois profonds. Ne vous aventures pas trop loin sans y être préparé. Beaucoup avant vous se sont perdus ou pire. Vous avez été prévenu.",
-
-  "sign.text.random.1": "Des escargots sont dans ce lieu",
-  "sign.text.random.2": "Si vous êtes très prudent et très chanceux, vous pourriez rencontrer une licorne par une journée ensoleillée.",
-  "sign.text.random.3": "Quelque part dans cette forêt se trouve une épée dans la pierre. Là depuis des siècles. Personne ne semble pouvoir la retirer.",
-  "sign.text.random.4": "Je n'arrive pas à retrouver mon chemin. Peut-être que mettre des panneaux m'aidera. Toi aussi es-tu perdu ?",
-  "sign.text.random.5": "Ne vous embêtez pas avec ces buissons épineux. Je pense qu'ils sont indestructibles. Il faudrait une bombe pour s’en débarrasser. Mais qui amène des bombes dans une forêt...",
-  "sign.text.random.6": "Ces bois sont hantés. Je jure avoir vu un fantôme une nuit.",
-  "sign.text.random.7": "J'ai trouvé une maison faite de nourriture. Au milieu de la forêt ! J'ai tout coupé, ça m'a duré une bonne semaine.",
-  "sign.text.random.8": "NON aux projets d'autoroutes de Joja en forêt ! ARRÊTEZ les destructions !",
-
-  "sign.text.item-marker": "Je laisse ce panneau aux autres voyageurs. Je suis vieux maintenant et ma mémoire s'estompe, mais quelque part ici j'ai enterré {item}.",
-  "sign.text.clearing-marker": "J'ai vu une clairière {NSWE} d'ici. Jusqu'où je ne me souviens pas. Soyez prudent, mon ami.",
-  "sign.text.mystical-force-marker": "Il y a une force mystique au sein de cette forêt. Je n'ai pas pu en trouver la source, mais il y a un certain pouvoir en ce lieu. Je marque cet endroit pour que quelqu'un d'autre ait plus de chance.",
+  "maxhouse.books.random.1": "= Folklore des licornes =^^Les licornes sont des créatures timides et insaisissables. Si vous en rencontrez une, ce qui nécessite mon ami une bonne dose de chance, approchez-la avec le plus grand des soins. Approchez trop rapidement et vous l’effrayerez, ce qui vous apportera une malchance terrible !",
+  "maxhouse.books.random.2": "= Sur les légendes et les épées =^^Les légendes disent que quelque part, caché dans la forêt, se trouve une épée magique ancienne, profondément ancrée dans une pierre. Seuls les plus expérimentés et chanceux pourront la retirer.",
+  "maxhouse.books.random.3": "= Extirper les mauvaises herbes, pour le jardinier aguerri=^^Si vous luttez contre une infestation de buissons épineux qui ne veulent pas partir, une bonne astuce est d’utiliser des bombes. Le meilleur ami des jardiniers consiste en un bon attirail d’explosifs. Utilisez plusieurs si nécessaires. BOUM !",
+  "maxhouse.books.random.4": "= Créatures nocturnes et autres choses à voir =^^Les fantômes et les chauves-souris sont une des créatures fascinantes qu’on peut observer après le crépuscule.",
+  "maxhouse.books.random.5": "= Nutrition et architecture=^^Il y a des siècles, lorsque les matériaux de construction étaient difficile à trouver, les gens fabriquaient des maisons à partir de pain, sucre d’orge et autres nourritures. Même si ce n’est plus à la mode, certaines de ces maisons abandonnées peuvent être trouvées dans des zones inexplorées. C’est aussi une bonne source de nourriture !",
+  "maxhouse.books.closebook": "Fermer le livre",
 
   "bigsign.message": "Bienvenue dans les Bois profonds ! Où la nature et la magie cohabitent en harmonie ! ^== Chasse aux monstres en famille ==^== Sentiers de randonnée pour tous les niveaux ==^== Aventure et divertissement pour tous ==^^Attention : très dangereux. Aucune responsabilité envers les aventuriers morts, maudits ou perdus.",
-
-  "sign.NSWE.north": "Nord",
-  "sign.NSWE.south": "Sud",
-  "sign.NSWE.west": "Ouest",
-  "sign.NSWE.east": "Est",
+  "entrysign.message": "Vous entrez les Bois Profonds. Ne vous aventurez pas trop loin si vous n’y êtes pas préparé. Beaucoup avant vous se sont perdus ou pire encore. Vous avez été prévenu.",
 
   "orb-stone.question": "Vous vous sentez attiré vers cette pierre. Vous ne savez pas pourquoi. Oserez-vous le toucher ?",
   "orb-stone.yes": "Oui!",
   "orb-stone.no": "Eeehh, je préfère pas.",
   "orb-stone.touch-message": "Vous touchez soigneusement la pierre. Vous ressentez un bourdonnement, mais rien ne se passe.",
-  "orb-stone.touch-message-no-orb": "Vous touchez soigneusement la pierre. La pierre a l’impression d’aspirer à quelque chose. C'est une sensation étrange.",
+  "orb-stone.touch-message-no-orb": "Vous touchez soigneusement la pierre. La pierre vous donne l’impression d’aspirer à quelque chose. C'est une sensation étrange.",
 
-  "cave-entrance.caved-in.message": "L'entrée est effondrée. Il ne semble pas y avoir de moyen d'entrer."
+  "cave-entrance.caved-in.message": "L'entrée est effondrée. Il ne semble pas y avoir de moyen d'entrer.",
+
+  "minecart.destination.deepwoods": "Bois Profonds"
 }
