--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1,11 +1,44 @@
 ﻿{
-  "easter-egg.hatched-message": "Новый... одну минуту, кролик вылупился?!",
+  "easter-egg.hatched-message": "Новый… погоди, кролик вылупился?!",
   "easter-egg.name": "Пасхальное яйцо",
-  "excalibur.description": "Владение им обнадёживает.",
+  "excalibur.description": "Он внушает надежду, когда держишь его в руках.",
   "excalibur.name": "Экскалибур",
-  "lost-message": "Уххх, похоже вы потерялись...",
-  "healing-fountain.drink-message": "Вы чувствуете себя отдохнувшим, полным энергии и каким-то образом везучим.",
+  "excalibur.nope-message": "Он не сдвинется с места.",
+  "lost-message": "Ой-ой, похоже, ты заблудился в глухом лесу...",
+  "healing-fountain.drink-message": "Ты чувствуешь себя свежим, полным сил и, кажется, удачливым.",
   "woods-obelisk.description": "Телепортирует Вас прямо в глубины леса.",
   "woods-obelisk.name": "Лесной обелиск",
-  "woods-obelisk.wizard-mail": "Я почувствовал Ваше присутствие в глубинах леса.^В земле и корнях деревьев обитает сильная и старая магия.^Это сложно, но с правильными ингредиентами я должен суметь отследить обелиск, использующий эту магию, чтобы дать Вам пробраться в лес глубже.^Приходите в мою башню, когда будете готовы.^   -М. Расмодиус, Волшебник"
+  "woods-obelisk.wizard-mail": "Я почувствовал Ваше присутствие в глубинах леса.^В корнях деревьев и земле сокрыта сильная и древняя магия.^Это сложно, но с правильными ингредиентами я смогу создать обелиск, который использует эту магию, чтобы позволить тебе проникнуть гораздо глубже в лес.^Приходи в мою башню, когда будешь готов.^   -М. Расмодиус, Волшебник",
+
+  "messagebox.close": "Закрыто",
+
+  "maxhouse.puzzle.nope": "Ты слышишь щелчок, но ничего не происходит...",
+
+  "maxhouse.stuff.question": "Много-много всего.",
+  "maxhouse.stuff.answer.search": "Порыться в вещах",
+  "maxhouse.stuff.answer.nevermind": "Неважно",
+  "maxhouse.stuff.nothing": "Ты не нашёл ничего полезного прямо сейчас. Может, в другой раз...",
+
+  "maxhouse.shop.empty": "В магазине сейчас нет товара. Загляните позже.",
+  "maxhouse.quests.empty": "Сейчас нет доступных заданий или квестов. Возвращайтесь позже.",
+
+  "maxhouse.books.random.1": "= Легенды О Единорогах =^^Единороги — создания робкие и таинственные. Если тебе когда-нибудь выпадет шанс встретить одного (а это, мой друг, большая редкость и удача), подходи к нему с предельной осторожностью. Одно неверное движение — и он исчезнет, оставив тебя в пучине невезения!",
+  "maxhouse.books.random.2": "= О Легендах И Мечах =^^Легенды гласят, что где-то в этом лесу спрятан древний магический меч, глубоко заточенный в камне. Только самый умелый, достойный и удачливый сможет вытащить его.",
+  "maxhouse.books.random.3": "= Борьба С Сорняками Для Бывалых Садоводов =^^Когда колючие кусты захватывают ваш сад и не думают сдаваться, вспомните старый проверенный метод — бомбы. Щедрая порция взрывчатки — верный союзник любого садовода. А если нужно, не стесняйтесь добавить ещё!",
+  "maxhouse.books.random.4": "= Существа Ночи И Прочие Таинственные Явления =^^Призраки и летучие мыши — одни из многих удивительных созданий, которых можно встретить после заката.",
+  "maxhouse.books.random.5": "= Питание И Архитектура =^^Сотни лет назад, когда строительные материалы было трудно найти, люди строили дома из хлеба, конфет и других продуктов. Хотя такая мода уже прошла, некоторые заброшенные дома до сих пор можно найти в неисследованных местах. Отличный источник еды, кстати!",
+  "maxhouse.books.closebook": "Закрыть книгу",
+
+  "bigsign.message": "Добро пожаловать в Глухой Лес! Где природа и магия существуют в гармонии!^== Охота на монстров для всей семьи ==^== Тропы для походов любого уровня сложности ==^== Приключения и веселье для каждого ==^^Предупреждение: Очень опасно. Мы не несём ответственности за погибших, проклятых или потерявшихся искателей приключений.",
+  "entrysign.message": "Вы ступаете в Глухой Лес. Не рискуйте углубляться без должной подготовки. Многие до вас сгинули в этих чащах или нашли нечто ужасное. Пусть это будет вам предостережением.",
+
+  "orb-stone.question": "Камень манит тебя, словно зовя в неизвестность. Ты не понимаешь, что влечёт тебя к нему... Решишься ли ты коснуться его?",
+  "orb-stone.yes": "Да!",
+  "orb-stone.no": "М-м-м... нет, пожалуй, не буду рисковать.",
+  "orb-stone.touch-message": "Ты бережно прикасаешься к камню. Под пальцами ощущается едва уловимое дрожание, но вокруг тихо, будто ничего и не изменилось.",
+  "orb-stone.touch-message-no-orb": "Ты бережно прикасаешься к камню, и он словно ждёт чего-то... чего-то важного. Странное, почти живое чувство охватывает тебя.",
+
+  "cave-entrance.caved-in.message": "Вход завален. Похоже, попасть внутрь невозможно.",
+
+  "minecart.destination.deepwoods": "Глухой Лес"
 }
