--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1,5 +1,5 @@
 ﻿{
-  "easter-egg.hatched-message": "Новый… погоди, кролик вылупился?!",
+  "easter-egg.hatched-message": "Новый... погоди, кролик вылупился?!",
   "easter-egg.name": "Пасхальное яйцо",
   "excalibur.description": "Он внушает надежду, когда держишь его в руках.",
   "excalibur.name": "Экскалибур",
